--- a/talks/index.html
+++ b/talks/index.html
@@ -66,6 +66,14 @@
 
     <tr>
         <td></td>
+        <td data-location="52.22047605952363, 21.01816733451072" data-place="paramount">dev2next</td>
+        <td><a href="https://warszawa.jug.pl/">Embracing Microservices</a></td>
+        <td>03.09.2024</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
         <td><a href="http://www.jcrete.org"></a>Can Java Developer learn anything from Golang?</td>
         <td>24.07.2024</td>
