--- a/talks/index.html
+++ b/talks/index.html
@@ -66,7 +66,7 @@
 
     <tr>
         <td></td>
-        <td data-location="52.22047605952363, 21.01816733451072" data-place="paramount">dev2next</td>
+        <td data-location="52.22047605952363, 21.01816733451072" data-place="paramount">WarsawJUG</td>
         <td><a href="https://warszawa.jug.pl/">Embracing Microservices</a></td>
         <td>03.09.2024</td>
         <td>Warsaw/Poland</td>
