--- a/talks/index.html
+++ b/talks/index.html
@@ -41,6 +41,14 @@
 
     <tr>
         <td></td>
+        <td data-location="54.696440, 25.275527" data-place="RadissonBlu Vilnius">BuildStuff 2024</td>
+        <td><a href="https://www.buildstuff.events">Embracing Microservices</a></td>
+        <td>13.11.2024</td>
+        <td>Vilnius/Lithuania</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2024</td>
         <td><a href="https://jdd.org.pl">JEP 473: Breathing New Life into Java Stream API</a></td>
         <td>22.10.2024</td>
