--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -44,8 +44,7 @@
         <section>
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
             <h4>Independent Consultant/Trainer</h4>
-            <h4>WarsawJUG Leader</h4>
-            <h4>Vavr Leader</h4>
+            <h4>WarsawJUG | Vavr Leader</h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
             <br>
         </section>
@@ -167,8 +166,13 @@
         </section>
 
         <section>
+            <img src="img/micro-monolith.jpg" width="70%"/>
+        </section>
+
+
+        <section>
             <h3>The Pragmatic Default</h3>
-            <img src="img/citadel.png" width="50%"/>
+            <img src="img/citadel.png" width="60%"/>
             <small><a href="https://twitter.com/dhh/status/1247522358908215296</small">https://twitter.com/dhh/status/1247522358908215296</a></small>
         </section>
 
