--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -36,6 +36,8 @@
     <div class="slides">
         <section>
             <h2>Embracing Microservices</h2>
+            <h5>Director's Cut</h5>
+            <br><br>
             <h4><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
             <img class="fragment" src="img/embarrasing.png" width="60%"/>
@@ -44,6 +46,7 @@
         <section>
             <h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
             <h4>Independent Consultant/Trainer</h4>
+            <small>distributed systems | microservices | async | reactive | java | idiomatic go</small>
             <h4>WarsawJUG | Vavr Leader</h4>
             <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
             <br>
@@ -333,7 +336,6 @@
     // - https://revealjs.com/config/
     Reveal.initialize({
         hash: true,
-
         // Learn about plugins: https://revealjs.com/plugins/
         plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
     });
