--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -58,12 +58,12 @@
 
         <section data-transition="fade">
             <img src="img/microservices.jpeg" width="80%"/>
-            <small><a href="https://twitter.com/ddprrt/status/1425418538257428488">https://twitter.com/ddprrt/status/1425418538257428488</a></small>
+            <small><small><a href="https://twitter.com/ddprrt/status/1425418538257428488">https://twitter.com/ddprrt/status/1425418538257428488</a></small></small>
         </section>
 
         <section data-transition="fade">
             <img src="img/microservices-2.jpeg" width="80%"/>
-            <small><a href="https://twitter.com/ddprrt/status/1425418538257428488">https://twitter.com/ddprrt/status/1425418538257428488</a></small>
+            <small><small><a href="https://twitter.com/ddprrt/status/1425418538257428488">https://twitter.com/ddprrt/status/1425418538257428488</a></small></small>
         </section>
 
         <section>
@@ -72,7 +72,7 @@
                     cite="https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/">
                 "It was the invention of the null reference in 1965...I call it my billion-dollar mistake."
             </blockquote>
-            <small>Tony Hoare</small>
+            <small><small>Tony Hoare</small></small>
         </section>
 
         <section>
@@ -96,8 +96,10 @@
             <h4 class="fragment">Microservice vs service?</h4>
             <h4 class="fragment">How small is "micro"?</h4>
             <h5 class="fragment">N lines of code?</h5>
+            <h5 class="fragment">N endpoints?</h5>
             <h5 class="fragment">N classes?</h5>
             <h5 class="fragment">N MBs?</h5>
+            <h5 class="fragment">N responsibilities?</h5>
             <h5 class="fragment">Rewritable in X time?</h5>
         </section>
 
@@ -111,14 +113,14 @@
 
             <img src="img/tight-coupling.png" width="50%"/>
             <br>
-            <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
+            <small><small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small></small>
         </section>
         <section data-transition="fade">
             <h4>Low coupling - High cohesion</h4>
 
             <img src="img/loose-coupling.png" width="50%"/>
             <br>
-            <small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small>
+            <small><small>source: <a href="https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/">https://enterprisecraftsmanship.com/posts/cohesion-coupling-difference/</a></small></small>
         </section>
 
         <section>
@@ -154,7 +156,7 @@
                 However, don't be fooled by the size of those microservices, because a lot of those so-called microservices at Netflix are a lot larger, just looking at the code base, than the big monoliths that I've worked at, at many other companies.
             </blockquote>
             <small>Paul Bakker,</small>
-            <small> source: <a href="https://www.infoq.com/presentations/netflix-java/">https://www.infoq.com/presentations/netflix-java/</a></small>
+            <small><small> source: <a href="https://www.infoq.com/presentations/netflix-java/">https://www.infoq.com/presentations/netflix-java/</a></small></small>
         </section>
 
         <section>
@@ -176,14 +178,14 @@
         <section>
             <h3>The Pragmatic Default</h3>
             <img src="img/citadel.png" width="60%"/>
-            <small><a href="https://twitter.com/dhh/status/1247522358908215296</small">https://twitter.com/dhh/status/1247522358908215296</a></small>
+           <small> <small><a href="https://twitter.com/dhh/status/1247522358908215296</small">https://twitter.com/dhh/status/1247522358908215296</a></small></small>
         </section>
 
         <section>
             <blockquote cite="'Static Analysis at Scale: An Instagram Story' by Benjamin Woodruff" width="100%">
                 Our server app is a monolith, one big codebase of several million lines and a few thousand Django endpoints [1], all loaded up and served together. A few services have been split out of the monolith, but we don’t have any plans to aggressively break it up.
             </blockquote>
-            <small><a href="https://instagram-engineering.com/static-analysis-at-scale-an-instagram-story-8f498ab71a0c">https://instagram-engineering.com/static-analysis-at-scale-an-instagram-story-8f498ab71a0c</a></small>
+            <small><small><a href="https://instagram-engineering.com/static-analysis-at-scale-an-instagram-story-8f498ab71a0c">https://instagram-engineering.com/static-analysis-at-scale-an-instagram-story-8f498ab71a0c</a></small></small>
         </section>
 
         <section>
