--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -155,8 +155,9 @@
             <blockquote cite="'How Netflix Really Uses Java' by Paul Bakker" width="100%">
                 However, don't be fooled by the size of those microservices, because a lot of those so-called microservices at Netflix are a lot larger, just looking at the code base, than the big monoliths that I've worked at, at many other companies.
             </blockquote>
-            <small>Paul Bakker,</small>
-            <small><small> source: <a href="https://www.infoq.com/presentations/netflix-java/">https://www.infoq.com/presentations/netflix-java/</a></small></small>
+            <small>Paul Bakker</small>
+            <br>
+            <small><small>source: <a href="https://www.infoq.com/presentations/netflix-java/">https://www.infoq.com/presentations/netflix-java/</a></small></small>
         </section>
 
         <section>
