--- a/talks/index.html
+++ b/talks/index.html
@@ -66,6 +66,14 @@
 
     <tr>
         <td></td>
+        <td data-location="41.412068619461316, 2.220495284533813" data-place="Ingram">Barcelona JUG</td>
+        <td><a href="https://barcelonajug.org">Embracing Microservices (Director's Cut)</a>
+        <td>17.09.2024</td>
+        <td>Barcelona/Spain</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="52.23363895794495, 21.0019294111386" data-place="WFC">JEurope</td>
         <td><a href="https://jeurope.pl">Virtual Threads in Action</a></td>
         <td>12.09.2024</td>
@@ -75,7 +83,7 @@
     <tr>
         <td></td>
         <td data-location="52.22047605952363, 21.01816733451072" data-place="paramount">WarsawJUG</td>
-        <td><a href="https://warszawa.jug.pl/">Embracing Microservices</a></td>
+        <td><a href="https://warszawa.jug.pl/">Embracing Microservices (Director's Cut)</a></td>
         <td>03.09.2024</td>
         <td>Warsaw/Poland</td>
     </tr>
