--- a/talks/virtual-threads-in-action/index.html
+++ b/talks/virtual-threads-in-action/index.html
@@ -54,6 +54,10 @@
             <br>
         </section>
 
+        <section>
+            <img src="img/osthread-vs-vthread.svg" alt="osthreads-vs-virtual-threads">
+        </section>
+
 
         <section>
             <h4>Thank You!</h4>
