--- a/talks/virtual-threads-in-action/index.html
+++ b/talks/virtual-threads-in-action/index.html
@@ -38,6 +38,10 @@
         <section data-background-image="img/jeurope.png">
 
         </section>
+
+        <section>
+            <h2><a href="https://gist.github.com/pivovarit/c3ca1531ca1fe4adf75aa75132493065">GitHub link</a></h2>
+        </section>
         <section>
             <h2>Virtual Threads in Action</h2>
             <br><br>
@@ -57,7 +61,6 @@
         <section>
             <img src="img/osthread-vs-vthread.svg" alt="osthreads-vs-virtual-threads">
         </section>
-
 
         <section>
             <h4>Thank You!</h4>
