--- a/talks/index.html
+++ b/talks/index.html
@@ -357,9 +357,7 @@
 
     <tr>
         <td></td>
-        <td data-location="41.40927967363553, 2.2197463141279963"
-            data-place="International Barcelona Convention Center">JBCNConf 2022
-        </td>
+        <td data-location="41.40927967363553, 2.2197463141279963" data-place="International Barcelona Convention Center">JBCNConf 2022</td>
         <td><a href="http://www.jbcnconf.com/2022/">CompletableFuture and its Quirks</a></td>
         <td>19.07.2022</td>
         <td>Barcelona/Spain</td>
