--- a/talks/index.html
+++ b/talks/index.html
@@ -91,7 +91,7 @@
     <tr>
         <td></td>
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
-        <td><a href="http://www.jcrete.org"></a>Can Java Developer learn anything from Golang?</td>
+        <td><a href="https://www.jcrete.org"></a>Can Java Developer learn anything from Golang?</td>
         <td>24.07.2024</td>
         <td>Kolymvari/Greece</td>
     </tr>
@@ -99,7 +99,7 @@
     <tr>
         <td></td>
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
-        <td><a href="http://www.jcrete.org"></a>State of the Functional Programming in Java</td>
+        <td><a href="https://www.jcrete.org"></a>State of the Functional Programming in Java</td>
         <td>23.07.2024</td>
         <td>Kolymvari/Greece</td>
     </tr>
@@ -107,7 +107,7 @@
     <tr>
         <td></td>
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2024</td>
-        <td><a href="http://www.jcrete.org"></a>Microservices: Lessons Learned</td>
+        <td><a href="https://www.jcrete.org"></a>Microservices: Lessons Learned</td>
         <td>22.07.2024</td>
         <td>Kolymvari/Greece</td>
     </tr>
@@ -204,7 +204,7 @@
     <tr>
         <td></td>
         <td data-location="52.22270422499571, 21.006949415482094" data-place="MiNI">YavaConf 2023</td>
-        <td><a href="http://yavaconf.com">Embracing Microservices</a></td>
+        <td><a href="https://yavaconf.com">Embracing Microservices</a></td>
         <td>9.12.2023</td>
         <td>Warsaw/Poland</td>
     </tr>
@@ -340,7 +340,7 @@
     <tr>
         <td></td>
         <td data-location="52.22270422499571, 21.006949415482094" data-place="MiNI">YavaConf 2022</td>
-        <td><a href="http://yavaconf.com">The Future of Hazelcast</a></td>
+        <td><a href="https://yavaconf.com">The Future of Hazelcast</a></td>
         <td>28.09.2022</td>
         <td>Warsaw/Poland</td>
     </tr>
@@ -358,7 +358,7 @@
     <tr>
         <td></td>
         <td data-location="41.40927967363553, 2.2197463141279963" data-place="International Barcelona Convention Center">JBCNConf 2022</td>
-        <td><a href="http://www.jbcnconf.com/2022/">CompletableFuture and its Quirks</a></td>
+        <td><a href="https://www.jbcnconf.com/2022/">CompletableFuture and its Quirks</a></td>
         <td>19.07.2022</td>
         <td>Barcelona/Spain</td>
     </tr>
@@ -439,8 +439,7 @@
     <tr>
         <td></td>
         <td data-location="51.759786, 19.451467" data-place="Stara Drukarnia">JUG Łódź</td>
-        <td><a href="https://www.meetup.com/Java-User-Group-Lodz/events/285059497/">Hazelcast 5.1 – The
-            Hitchhiker's Guide</a></td>
+        <td><a href="https://www.meetup.com/Java-User-Group-Lodz/events/285059497/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
         <td>21.04.2022</td>
         <td>Łódź/Poland</td>
     </tr>
@@ -545,14 +544,14 @@
     <tr>
         <td></td>
         <td>4Developers</td>
-        <td><a href="http://4developers.org.pl/">Hazelcast: The Hitchhiker's Guide</a></td>
+        <td><a href="https://4developers.org.pl/">Hazelcast: The Hitchhiker's Guide</a></td>
         <td>18.09.2020</td>
         <td>Online</td>
     </tr>
     <tr>
         <td></td>
         <td>Segfault Online</td>
-        <td><a href="http://segfault.events/">Fantastic Frameworks and How to Avoid Them - Director's Cut</a></td>
+        <td><a href="https://segfault.events/">Fantastic Frameworks and How to Avoid Them - Director's Cut</a></td>
         <td>25.06.2020</td>
         <td>Online</td>
     </tr>
@@ -592,8 +591,7 @@
     <tr>
         <td></td>
         <td>JSession</td>
-        <td><a href="https://www.facebook.com/events/601356630451391/">Fantastic Frameworks and How to Avoid
-            Them</a></td>
+        <td><a href="https://www.facebook.com/events/601356630451391/">Fantastic Frameworks and How to Avoid Them</a></td>
         <td>18.03.2020</td>
         <td>Online</td>
     </tr>
@@ -601,8 +599,7 @@
     <tr>
         <td></td>
         <td data-location="50.028506, 22.001869" data-place="Apart Hotel 12">RzeszówJUG</td>
-        <td><a href="https://www.meetup.com/Rzeszow-Java-User-Group/">Fantastic Frameworks and How to Avoid
-            Them</a></td>
+        <td><a href="https://www.meetup.com/Rzeszow-Java-User-Group/">Fantastic Frameworks and How to Avoid Them</a></td>
         <td>12.02.2020</td>
         <td>Rzeszów/Poland</td>
     </tr>
@@ -629,7 +626,7 @@
     <tr>
         <td></td>
         <td data-location="50.476675, 30.500365" data-place="M82">DevoxxUA 2019</td>
-        <td><a href="http://devoxx.com.ua/">Purely Dysfunctional Data Structures</a></td>
+        <td><a href="https://devoxx.com.ua/">Purely Dysfunctional Data Structures</a></td>
         <td>1.11.2019</td>
         <td>Kiev/Ukraine</td>
     </tr>
@@ -677,7 +674,7 @@
     <tr>
         <td></td>
         <td data-location="41.396508, 2.201906" data-place="CasumoBCN">CasumoTechTalksBCN 2019</td>
-        <td><a href="http://casumocareers.com/">Purely Dysfunctional Data Structures</a></td>
+        <td><a href="https://casumocareers.com/">Purely Dysfunctional Data Structures</a></td>
         <td>19.09.2019</td>
         <td>Barcelona/Spain</td>
     </tr>
@@ -693,7 +690,7 @@
     <tr>
         <td></td>
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2019</td>
-        <td><a href="http://www.jcrete.org">Scaling Leadership in "flat" organizations</a></td>
+        <td><a href="https://www.jcrete.org">Scaling Leadership in "flat" organizations</a></td>
         <td>16.07.2019</td>
         <td>Kolymvari/Greece</td>
     </tr>
@@ -716,8 +713,7 @@
     <tr>
         <td></td>
         <td data-location="50.250099, 19.027050" data-place="Vattenfall">Vattenfall Tech Talks #3</td>
-        <td><a href="https://www.meetup.com/TechTalks-Vattenfall/events/261896689/">The Dark Side of Java 8</a>
-        </td>
+        <td><a href="https://www.meetup.com/TechTalks-Vattenfall/events/261896689/">The Dark Side of Java 8</a></td>
         <td>18.06.2019</td>
         <td>Katowice/Poland</td>
     </tr>
@@ -771,8 +767,7 @@
     <tr>
         <td></td>
         <td data-location="50.870255, 20.628023" data-place="Bohomass Lab">Kielce JUG</td>
-        <td><a href="https://www.meetup.com/Kielce-Java-User-Group/">Fantastic Frameworks and How to Avoid Them</a>
-        </td>
+        <td><a href="https://www.meetup.com/Kielce-Java-User-Group/">Fantastic Frameworks and How to Avoid Them</a></td>
         <td>31.01.2019</td>
         <td>Kielce/Poland</td>
     </tr>
@@ -797,7 +792,7 @@
     <tr>
         <td></td>
         <td data-location="50.053351,19.958609" data-place="Hotel Galaxy Cracow">CoreDump Cracow 2018</td>
-        <td><a href="http://coredump.events/2018/">Fantastic Frameworks and How to Avoid Them</a></td>
+        <td><a href="https://coredump.events/2018/">Fantastic Frameworks and How to Avoid Them</a></td>
         <td>26.11.2018</td>
         <td>Cracow/Poland</td>
     </tr>
@@ -827,9 +822,7 @@
     <tr>
         <td></td>
         <td data-location="35.922822,14.474884" data-place="Casumo HQ">Casumo Tech Meetup #1</td>
-        <td>
-            <a href="https://www.eventbrite.com/e/casumo-tech-meetup-1-event-sourced-architectures-java-8-postmortem-tickets-50436487893?aff=CasumoTechMeetup">The
-                Dark Side of Java 8</a></td>
+        <td><a href="https://www.eventbrite.com/e/casumo-tech-meetup-1-event-sourced-architectures-java-8-postmortem-tickets-50436487893?aff=CasumoTechMeetup">The Dark Side of Java 8</a></td>
         <td>2.10.2018</td>
         <td>Malta</td>
     </tr>
@@ -843,14 +836,14 @@
     <tr>
         <td></td>
         <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2018</td>
-        <td><a href="http://devoxx.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td><a href="https://devoxx.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>20.06.2018</td>
         <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="41.435020, 2.181185" data-place="Cinesa Heron City">JBCNConf 2018</td>
-        <td><a href="http://www.jbcnconf.com/2018/">The Dark Side of Java 8</a></td>
+        <td><a href="https://www.jbcnconf.com/2018/">The Dark Side of Java 8</a></td>
         <td>12.06.2018</td>
         <td>Barcelona/Spain</td>
     </tr>
@@ -926,8 +919,7 @@
     <tr>
         <td></td>
         <td data-location="51.245200,22.540561" data-place="UMCS University">Lublin JUG 2018</td>
-        <td><a href="https://www.meetup.com/Lublin-Java-User-Group/events/245133338/">A Hitchhiker's Guide to the
-            Functional Exception Handling in Java</a></td>
+        <td><a href="https://www.meetup.com/Lublin-Java-User-Group/events/245133338/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>09.01.2018</td>
         <td>Lublin/Poland</td>
     </tr>
@@ -938,21 +930,21 @@
     <tr>
         <td></td>
         <td data-location="52.226501,20.999614" data-place="Sages">StacjaIT 2017</td>
-        <td><a href="http://stacja.it">Wprowadzenie do programowania funkcyjnego w Javie</a></td>
+        <td><a href="https://stacja.it">Wprowadzenie do programowania funkcyjnego w Javie</a></td>
         <td>09.12.2017</td>
         <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="53.131693,23.160579" data-place="Explorer HQ">jSession 2017</td>
-        <td><a href="http://jsession.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
+        <td><a href="https://jsession.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>06.12.2017</td>
         <td>Bialystok/Poland</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="50.448875,30.540683" data-place="Parkovy Conference Center">JavaDay 2017</td>
-        <td><a href="http://javaday.org.ua/kyiv/">A Hitchhiker's Guide to the Functional Exception Handling in
+        <td><a href="https://javaday.org.ua/kyiv/">A Hitchhiker's Guide to the Functional Exception Handling in
             Java</a></td>
         <td>04.11.2017</td>
         <td>Kiev/Ukraine</td>
@@ -967,7 +959,7 @@
     <tr>
         <td></td>
         <td data-location="49.802881,24.011409" data-place="Symphony Solutions Office">JUG Lviv 2017</td>
-        <td><a href="http://www.jug.lviv.ua">A Hitchhiker's Guide to the Functional Exception Handling in Java</a>
+        <td><a href="https://www.jug.lviv.ua">A Hitchhiker's Guide to the Functional Exception Handling in Java</a>
         </td>
         <td>14.09.2017</td>
         <td>Lviv/Ukraine</td>
@@ -975,7 +967,7 @@
     <tr>
         <td></td>
         <td data-location="35.552030,23.777177" data-place="Orthodox Academy of Crete">JCrete 2017</td>
-        <td><a href="http://www.jcrete.org">Functional Java - Discussion Panel</a></td>
+        <td><a href="https://www.jcrete.org">Functional Java - Discussion Panel</a></td>
         <td>17.07.2017</td>
         <td>Kolymvari/Greece</td>
     </tr>
@@ -990,14 +982,14 @@
     <tr>
         <td></td>
         <td data-location="50.048165,19.931766" data-place="ICE Cracow">DevoxxPL 2017</td>
-        <td><a href="http://devoxx.pl">Vavr by Example</a></td>
+        <td><a href="https://devoxx.pl">Vavr by Example</a></td>
         <td>21.06.2017</td>
         <td>Cracow/Poland</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="41.359554,2.129277" data-place="Gran Via 2">JBCNConf 2017</td>
-        <td><a href="http://www.jbcnconf.com/2017/">Vavr - Functional Java Done Right</a></td>
+        <td><a href="https://www.jbcnconf.com/2017/">Vavr - Functional Java Done Right</a></td>
         <td>19.06.2017</td>
         <td>Barcelona/Spain</td>
     </tr>
@@ -1018,7 +1010,7 @@
     <tr>
         <td></td>
         <td data-location="51.746946,19.453665" data-place="Lodz University of Technology">JUG Łódź 2017</td>
-        <td><a href="http://www.juglodz.pl">Javaslang - livecoding session</a></td>
+        <td><a href="https://www.juglodz.pl">Javaslang - livecoding session</a></td>
         <td>23.03.2017</td>
         <td>Lodz/Poland</td>
     </tr>
@@ -1032,7 +1024,7 @@
     <tr>
         <td></td>
         <td data-location="49.853299,24.024658" data-place="Lohika Office">Morning@Lohika 2017</td>
-        <td><a href="http://morning.lohika.com">Functional Java - livecoding session</a></td>
+        <td><a href="https://morning.lohika.com">Functional Java - livecoding session</a></td>
         <td>11.02.2017</td>
         <td>Lviv/Ukraine</td>
     </tr>
@@ -1049,7 +1041,7 @@
     <tr>
         <td></td>
         <td data-location="53.010468,18.594269" data-place="UMK Toruń">ToruńJUG 2016</td>
-        <td><a href="http://torun.jug.pl">Javaslang - Functional Java Done Right</a></td>
+        <td><a href="https://torun.jug.pl">Javaslang - Functional Java Done Right</a></td>
         <td>30.11.2016</td>
         <td>Torun/Poland</td>
     </tr>
@@ -1057,14 +1049,14 @@
         <td></td>
         <td data-location="50.433394,30.520315" data-place="National Sports Complex “Olympiyskiy”">BuildStuffUA 2016
         </td>
-        <td><a href="http://www.buildstuff.com.ua/kiev/">Javaslang - Functional Java Done Right</a></td>
+        <td><a href="https://www.buildstuff.com.ua/kiev/">Javaslang - Functional Java Done Right</a></td>
         <td>22.11.2016</td>
         <td>Kiev/Ukraine</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="54.696440, 25.275527" data-place="RadissonBlu Vilnius">BuildStuffLT 2016</td>
-        <td><a href="http://buildstuff.lt">Javaslang - Functional Java Done Right</a></td>
+        <td><a href="https://buildstuff.lt">Javaslang - Functional Java Done Right</a></td>
         <td>16.11.2016</td>
         <td>Vilnius/Lithuania</td>
     </tr>
@@ -1085,14 +1077,14 @@
     <tr>
         <td></td>
         <td data-location="50.448875,30.540683" data-place="Parkovy Conference Center">JavaDay 2016</td>
-        <td><a href="http://javaday.org.ua/kyiv/">Javaslang - Functional Java Done Right</a></td>
+        <td><a href="https://javaday.org.ua/kyiv/">Javaslang - Functional Java Done Right</a></td>
         <td>14.10.2016</td>
         <td>Kiev/Ukraine</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="50.059208,19.943648" data-place="DoubleTree Cracow by Hilton">JDD 2016</td>
-        <td><a href="http://16.jdd.org.pl">Javaslang - Functional Java Done Right</a></td>
+        <td><a href="https://16.jdd.org.pl">Javaslang - Functional Java Done Right</a></td>
         <td>10.10.2016</td>
         <td>Cracow/Poland</td>
     </tr>
@@ -1106,14 +1098,14 @@
     <tr>
         <td></td>
         <td data-location="49.774878,24.030280" data-place="Arena Lviv">JDayLviv 2016</td>
-        <td><a href="http://www.jday.com.ua">Javaslang - Functional Java Done Right</a></td>
+        <td><a href="https://www.jday.com.ua">Javaslang - Functional Java Done Right</a></td>
         <td>03.09.2016</td>
         <td>Lviv/Ukraine</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="46.467029,30.762330" data-place="Otrada Beach Club">BuildStuff Odessa 2016</td>
-        <td><a href="http://www.buildstuff.com.ua/odessa/">Functional Programming tools in Java8 Workshop</a></td>
+        <td><a href="https://www.buildstuff.com.ua/odessa/">Functional Programming tools in Java8 Workshop</a></td>
         <td>08.07.2016</td>
         <td>Odessa/Ukraine</td>
     </tr>
@@ -1127,7 +1119,7 @@
     <tr>
         <td></td>
         <td data-location="50.041927,21.998888" data-place="Hotel Rzeszow">Kariera IT Rzeszów 2016</td>
-        <td><a href="http://careercon.pl/en/conference/kariera-it-rzeszow-18-06-2015/">Java Wars VIII: The Function
+        <td><a href="https://careercon.pl/en/conference/kariera-it-rzeszow-18-06-2015/">Java Wars VIII: The Function
             Awakens</a></td>
         <td>18.06.2016</td>
         <td>Rzeszów/Poland</td>
@@ -1142,21 +1134,21 @@
     <tr>
         <td></td>
         <td data-location="50.448875,30.540683" data-place="Parkovy Conference Center">JEEConf 2016</td>
-        <td><a href="http://jeeconf.com">Java Wars VIII: The Function Awakens</a></td>
+        <td><a href="https://jeeconf.com">Java Wars VIII: The Function Awakens</a></td>
         <td>20.05.2016</td>
         <td>Kiev/Ukraine</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="53.448489,14.491266" data-place="West Pomeranian University of Technology">DevCrowd 2016</td>
-        <td><a href="http://devcrowd.pl">Java Wars VIII: The Function Awakens</a></td>
+        <td><a href="https://devcrowd.pl">Java Wars VIII: The Function Awakens</a></td>
         <td>23.04.2016</td>
         <td>Szczecin/Poland</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="51.108534,17.039074" data-place="Hotel Mercure">Kariera IT Wrocław 2016</td>
-        <td><a href="http://careercon.pl/konferencja/kariera-it-wroclaw-16-04-2016/">Java Wars VIII: The Function
+        <td><a href="https://careercon.pl/konferencja/kariera-it-wroclaw-16-04-2016/">Java Wars VIII: The Function
             Awakens</a></td>
         <td>16.04.2016</td>
         <td>Wroclaw/Poland</td>
@@ -1164,14 +1156,14 @@
     <tr>
         <td></td>
         <td data-location="52.181330,20.971640" data-place="Hotel Gromada Warsaw Airport">4Developers 2016</td>
-        <td><a href="http://2016.4developers.org.pl/en/">Java Wars VIII: The Function Awakens</a></td>
+        <td><a href="https://2016.4developers.org.pl/en/">Java Wars VIII: The Function Awakens</a></td>
         <td>11.04.2016</td>
         <td>Warsaw/Poland</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="50.059208,19.943648" data-place="Holiday Inn Krakow City Centre">Kariera IT Cracow 2016</td>
-        <td><a href="http://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function
+        <td><a href="https://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function
             Awakens</a></td>
         <td>09.04.2016</td>
         <td>Cracow/Poland</td>
@@ -1188,7 +1180,7 @@
         <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">Kariera IT Warsaw
             2016
         </td>
-        <td><a href="http://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The Function
+        <td><a href="https://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The Function
             Awakens</a></td>
         <td>05.03.2016</td>
         <td>Warsaw/Poland</td>
@@ -1214,7 +1206,7 @@
     <tr>
         <td></td>
         <td data-location="52.211838,20.982262" data-place="MiM University of Warsaw">Jinkubator #29</td>
-        <td><a href="http://jinkubator.pl/#/meeting/29">Java 8: Lambdas, Monads and Java Collections</a></td>
+        <td><a href="https://jinkubator.pl/#/meeting/29">Java 8: Lambdas, Monads and Java Collections</a></td>
         <td>12.05.2015</td>
         <td>Warsaw/Poland</td>
     </tr>
@@ -1224,7 +1216,7 @@
     <tr>
         <td></td>
         <td data-location="52.212833,20.959682" data-place="TouK">TouK Weekly Workshops 2014</td>
-        <td><a href="http://touk.pl">Intellij IDEA Advanced Code Folding</a></td>
+        <td><a href="https://touk.pl">Intellij IDEA Advanced Code Folding</a></td>
         <td>28.03.2014</td>
         <td>Warsaw/Poland</td>
     </tr>
