--- a/talks/index.html
+++ b/talks/index.html
@@ -483,9 +483,7 @@
 
     <tr>
         <td></td>
-        <td data-location="53.14310869846268, 18.130762337675296"
-            data-place="University of Sciences and Technology in Bydgoszcz">BydgoszczJUG
-        </td>
+        <td data-location="53.14310869846268, 18.130762337675296" data-place="University of Sciences and Technology in Bydgoszcz">BydgoszczJUG</td>
         <td><a href="">Hazelcast: The Hitchhiker's Guide</a></td>
         <td>23.09.2021</td>
         <td>Bydgoszcz</td>
