--- a/talks/index.html
+++ b/talks/index.html
@@ -1045,8 +1045,7 @@
     </tr>
     <tr>
         <td></td>
-        <td data-location="50.433394,30.520315" data-place="National Sports Complex “Olympiyskiy”">BuildStuffUA 2016
-        </td>
+        <td data-location="50.433394,30.520315" data-place="National Sports Complex “Olympiyskiy”">BuildStuffUA 2016</td>
         <td><a href="https://www.buildstuff.com.ua/kiev/">Javaslang - Functional Java Done Right</a></td>
         <td>22.11.2016</td>
         <td>Kiev/Ukraine</td>
