--- a/talks/index.html
+++ b/talks/index.html
@@ -36,7 +36,11 @@
 
 
     <tr>
-        <td style="background: #ffffff" colspan="5" align="center">2024</td>
+        <td></td>
+        <td data-location="46.005145,8.956409" data-place="Palazzo Congressi">VoxxedDaysTicino 2025</td>
+        <td><a href="https://ticino.voxxeddays.com">What Can a Java Developer Learn from Golang?</a></td>
+        <td>17.01.2025</td>
+        <td>Lugano/Switzerland</td>
     </tr>
 
     <tr>
@@ -148,8 +152,7 @@
     <tr>
         <td></td>
         <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">4Developers 2024</td>
-        <td><a href="https://4developers.org.pl/4developers-2024/">Project Loom (improvised rescue live-coding
-            session)</a></td>
+        <td><a href="https://4developers.org.pl/4developers-2024/">Project Loom (improvised rescue live-coding session)</a></td>
         <td>16.04.2024</td>
         <td>Warsaw/Poland</td>
     </tr>
