--- a/talks/index.html
+++ b/talks/index.html
@@ -167,9 +167,7 @@
 
     <tr>
         <td></td>
-        <td data-location="52.23018544156033, 21.023449897930536" data-place="Warsaw Stock Exchange">Inspiring
-            Solutions
-        </td>
+        <td data-location="52.23018544156033, 21.023449897930536" data-place="Warsaw Stock Exchange">Inspiring Solutions</td>
         <td><a href="https://www.inspiringsolutions.pl">Discussion panel: "Cooperation between human and AI"</a></td>
         <td>12.04.2024</td>
         <td>Warsaw/Poland</td>
@@ -186,8 +184,7 @@
     <tr>
         <td></td>
         <td data-location="52.400185, 16.920849" data-place="Nowy Rynek">PoznańJUG</td>
-        <td><a href="https://www.meetup.com/pl-PL/poznan-java-user-group/events/299572243/">Embracing Microservices</a>
-        </td>
+        <td><a href="https://www.meetup.com/pl-PL/poznan-java-user-group/events/299572243/">Embracing Microservices</a></td>
         <td>13.03.2024</td>
         <td>Poznań/Poland</td>
     </tr>
@@ -308,8 +305,7 @@
     <tr>
         <td></td>
         <td data-location="41.10822749515926, 29.016460108128253" data-place="ING Türkiye">JUG Istanbul</td>
-        <td><a href="https://www.linkedin.com/posts/altuga_activity-6971070599540428800-rnPJ">CompletableFuture and its
-            Quirks/The Future of Hazelcast</a></td>
+        <td><a href="https://www.linkedin.com/posts/altuga_activity-6971070599540428800-rnPJ">CompletableFuture and its Quirks/The Future of Hazelcast</a></td>
         <td>18.10.2022</td>
         <td>Istanbul/Turkey</td>
     </tr>
@@ -317,8 +313,7 @@
     <tr>
         <td></td>
         <td data-location="41.40340897796727, 2.1894392443785713" data-place="Dynatrace">Barcelona JUG</td>
-        <td><a href="https://www.barcelonajug.org">CompletableFuture and its Quirks/The Future of Hazelcast</a>
-        </td>
+        <td><a href="https://www.barcelonajug.org">CompletableFuture and its Quirks/The Future of Hazelcast</a></td>
         <td>10.10.2022</td>
         <td>Barcelona/Spain</td>
     </tr>
@@ -352,8 +347,7 @@
     <tr>
         <td></td>
         <td data-location="51.1043131772483, 17.029854451107067" data-place="Pub Wędrówki">WrocławJUG</td>
-        <td><a href="https://www.meetup.com/wroclawjug/events/288250106">Hazelcast: The Journey from a Cache to
-            Cloud-Native</a></td>
+        <td><a href="https://www.meetup.com/wroclawjug/events/288250106">Hazelcast: The Journey from a Cache to Cloud-Native</a></td>
         <td>13.09.2022</td>
         <td>Wrocław/Poland</td>
     </tr>
@@ -470,8 +464,7 @@
     <tr>
         <td></td>
         <td>SilesiaJUG</td>
-        <td><a href="https://www.meetup.com/Silesia-JUG/events/281960824/">Wprowadzenie do ekosystemu Hazelcast
-            5.0</a></td>
+        <td><a href="https://www.meetup.com/Silesia-JUG/events/281960824/">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
         <td>18.11.2021</td>
         <td>Online</td>
     </tr>
@@ -851,16 +844,14 @@
     <tr>
         <td></td>
         <td data-location="56.946354, 24.116537" data-place="Forum Cinemas">RigaDevDays 2018</td>
-        <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a>
-        </td>
+        <td><a href="https://rigadevdays.lv">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>29.05.2018</td>
         <td>Riga/Latvia</td>
     </tr>
     <tr>
         <td></td>
         <td data-location="-20.223476, 57.495376" data-place="Voila Hotel">Developers Conference 2018</td>
-        <td><a href="https://conference.mscc.mu">A Hitchhiker's Guide to the Functional Exception Handling in
-            Java</a></td>
+        <td><a href="https://conference.mscc.mu">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>18.05.2018</td>
         <td>Port Louis/Mauritius</td>
     </tr>
@@ -882,8 +873,7 @@
     <tr>
         <td></td>
         <td data-location="47.358192,8.523817" data-place="Sihlcity">VoxxedDaysZurich 2018</td>
-        <td><a href="https://voxxeddays.com/zurich18/">A Hitchhiker's Guide to the Functional Exception Handling in
-            Java</a></td>
+        <td><a href="https://voxxeddays.com/zurich18/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>08.03.2018</td>
         <td>Zurich/Switzerland</td>
     </tr>
@@ -897,8 +887,7 @@
     <tr>
         <td></td>
         <td data-location="34.052873,-118.255685" data-place="The Westin Bonaventure Hotel">OracleCode LA 2018</td>
-        <td><a href="https://developer.oracle.com/code/losangeles">A Hitchhiker's Guide to the Functional Exception
-            Handling in Java</a></td>
+        <td><a href="https://developer.oracle.com/code/losangeles">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>27.02.2018</td>
         <td>Los Angeles/USA</td>
     </tr>
@@ -945,8 +934,7 @@
     <tr>
         <td></td>
         <td data-location="50.448875,30.540683" data-place="Parkovy Conference Center">JavaDay 2017</td>
-        <td><a href="https://javaday.org.ua/kyiv/">A Hitchhiker's Guide to the Functional Exception Handling in
-            Java</a></td>
+        <td><a href="https://javaday.org.ua/kyiv/">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>04.11.2017</td>
         <td>Kiev/Ukraine</td>
     </tr>
@@ -960,8 +948,7 @@
     <tr>
         <td></td>
         <td data-location="49.802881,24.011409" data-place="Symphony Solutions Office">JUG Lviv 2017</td>
-        <td><a href="https://www.jug.lviv.ua">A Hitchhiker's Guide to the Functional Exception Handling in Java</a>
-        </td>
+        <td><a href="https://www.jug.lviv.ua">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>14.09.2017</td>
         <td>Lviv/Ukraine</td>
     </tr>
@@ -975,8 +962,7 @@
     <tr>
         <td></td>
         <td data-location="52.200727,21.045776" data-place="Bobrowiecka Conference Center">Confitura 2017</td>
-        <td><a href="https://2017.confitura.pl">A Hitchhiker's Guide to the Functional Exception Handling in
-            Java</a></td>
+        <td><a href="https://2017.confitura.pl">A Hitchhiker's Guide to the Functional Exception Handling in Java</a></td>
         <td>01.07.2017</td>
         <td>Warsaw/Poland</td>
     </tr>
@@ -1119,8 +1105,7 @@
     <tr>
         <td></td>
         <td data-location="50.041927,21.998888" data-place="Hotel Rzeszow">Kariera IT Rzeszów 2016</td>
-        <td><a href="https://careercon.pl/en/conference/kariera-it-rzeszow-18-06-2015/">Java Wars VIII: The Function
-            Awakens</a></td>
+        <td><a href="https://careercon.pl/en/conference/kariera-it-rzeszow-18-06-2015/">Java Wars VIII: The Function Awakens</a></td>
         <td>18.06.2016</td>
         <td>Rzeszów/Poland</td>
     </tr>
@@ -1148,8 +1133,7 @@
     <tr>
         <td></td>
         <td data-location="51.108534,17.039074" data-place="Hotel Mercure">Kariera IT Wrocław 2016</td>
-        <td><a href="https://careercon.pl/konferencja/kariera-it-wroclaw-16-04-2016/">Java Wars VIII: The Function
-            Awakens</a></td>
+        <td><a href="https://careercon.pl/konferencja/kariera-it-wroclaw-16-04-2016/">Java Wars VIII: The Function Awakens</a></td>
         <td>16.04.2016</td>
         <td>Wroclaw/Poland</td>
     </tr>
@@ -1163,8 +1147,7 @@
     <tr>
         <td></td>
         <td data-location="50.059208,19.943648" data-place="Holiday Inn Krakow City Centre">Kariera IT Cracow 2016</td>
-        <td><a href="https://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function
-            Awakens</a></td>
+        <td><a href="https://careercon.pl/en/conference/kariera-it-krakow-09-04-2016/">Java Wars VIII: The Function Awakens</a></td>
         <td>09.04.2016</td>
         <td>Cracow/Poland</td>
     </tr>
@@ -1177,11 +1160,8 @@
     </tr>
     <tr>
         <td></td>
-        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">Kariera IT Warsaw
-            2016
-        </td>
-        <td><a href="https://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The Function
-            Awakens</a></td>
+        <td data-location="52.239186022279604, 21.045004980170685" data-place="Stadion Narodowy">Kariera IT Warsaw 2016</td>
+        <td><a href="https://careercon.pl/konferencja/kariera-it-warszawa-05-03-2016/">Java Wars VIII: The Function Awakens</a></td>
         <td>05.03.2016</td>
         <td>Warsaw/Poland</td>
     </tr>
