--- a/talks/index.html
+++ b/talks/index.html
@@ -44,6 +44,10 @@
     </tr>
 
     <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2024</td>
+    </tr>
+
+    <tr>
         <td></td>
         <td data-location="54.696440, 25.275527" data-place="RadissonBlu Vilnius">BuildStuff 2024</td>
         <td><a href="https://www.buildstuff.events">Embracing Microservices</a></td>
