--- a/talks/index.html
+++ b/talks/index.html
@@ -34,6 +34,9 @@
     </thead>
     <tbody id="talks">
 
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2025</td>
+    </tr>
 
     <tr>
         <td></td>
