--- a/talks/index.html
+++ b/talks/index.html
@@ -52,6 +52,14 @@
 
     <tr>
         <td></td>
+        <td>Talk4Devs 2024</td>
+        <td><a href="https://talk4devs.j-labs.pl/">JEP 485: Breathing New Life into Java Stream API (extended)</a></td>
+        <td>28.11.2024</td>
+        <td>Online</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td data-location="54.696440, 25.275527" data-place="RadissonBlu Vilnius">BuildStuff 2024</td>
         <td><a href="https://www.buildstuff.events">Embracing Microservices</a></td>
         <td>13.11.2024</td>
