--- a/talks/index.html
+++ b/talks/index.html
@@ -52,6 +52,14 @@
 
     <tr>
         <td></td>
+        <td data-location="52.24161484245933, 21.028687500632525" data-place="CNK">Ya!vaConf</td>
+        <td><a href="https://yavaconf.com">JEP 485: Breathing New Life into Java Stream API</a></td>
+        <td>11.12.2024</td>
+        <td>Warsaw/Poland</td>
+    </tr>
+
+    <tr>
+        <td></td>
         <td>Talk4Devs 2024</td>
         <td><a href="https://talk4devs.j-labs.pl/">JEP 485: Breathing New Life into Java Stream API (extended)</a></td>
         <td>28.11.2024</td>
@@ -73,7 +81,6 @@
         <td>22.10.2024</td>
         <td>Cracow/Poland</td>
     </tr>
-
 
     <tr>
         <td></td>
