--- a/talks/embracing-microservices/index.html
+++ b/talks/embracing-microservices/index.html
@@ -38,8 +38,8 @@
             <h2>Embracing Microservices</h2>
             <h5>Director's Cut</h5>
             <br><br>
-            <h4><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h4>
-            <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
+            <h4><a href="https://pivovarit.github.io"> Grzegorz Piwowarek</a></h4>
+            <h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
             <img class="fragment" src="img/embarrasing.png" width="60%"/>
         </section>
 
@@ -48,7 +48,7 @@
             <h4>Independent Consultant/Trainer</h4>
             <small>distributed systems | microservices | async | reactive | java | idiomatic go</small>
             <h4>WarsawJUG | Vavr Leader</h4>
-            <h5><a href="http://twitter.com/pivovarit">@pivovarit</a></h5>
+            <h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
             <br>
         </section>
 
