--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/simple.css">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -16,8 +16,32 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h3>Can a Java Developer Learn Anything...</h3>
+					<h4>From Golang?</h4>
+					<br><br>
+					<h4><a href="https://pivovarit.github.io"> Grzegorz Piwowarek</a></h4>
+					<h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
+				</section>
+
+				<section>
+					<h2>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h2>
+					<h4>Independent Consultant/Trainer</h4>
+					<small>distributed systems | microservices | async | reactive | java | idiomatic go</small>
+					<h4>WarsawJUG | Vavr Leader</h4>
+					<h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
+					<br>
+				</section>
+
+				<section>
+					<h4>Thank You!</h4>
+					<h4><a href="https://twitter.com/pivovarit">@pivovarit</a></h4>
+					<small><a href="https://4comprehension.com">4comprehension.com</a></small>
+					<br>
+					<img src="img/qrcode_pivovarit.github.io.png" width="30%"/>
+					<br>
+					<small><a href="https://pivovarit.github.io/talks/learn-from-go">https://pivovarit.github.io/talks/learn-from-go</a></small>
+				</section>
 			</div>
 		</div>
 
