--- a/talks/learn-from-go/index.html
+++ b/talks/learn-from-go/index.html
@@ -34,6 +34,37 @@
 				</section>
 
 				<section>
+					<h4 class="fragment">"Imperative"</h4>
+					<h4 class="fragment">"Boilerplate-heavy"</h4>
+					<h5 class="fragment">"Clunky"</h5>
+					<h5 class="fragment">"Bloated"</h5>
+					<h5 class="fragment">...</h5>
+
+					<h5 class="fragment">Words people use to describe Java!</h5>
+				</section>
+
+				<section>
+					<h4>Golang is even more "imperative", "boilerplate-heavy" than Java... and it's proud of that!</h4>
+
+					<img src="img/gopher.png" width="10%" alt="gopher"/>
+				</section>
+
+				<section>
+					<h3>Golang's Philosophy</h3>
+					<br>
+					<ul>
+						<li>Simplicity/Minimalism</li>
+						<li>Explicitness</li>
+						<li>Developer Productivity</li>
+						<li>Pragmatism</li>
+					</ul>
+
+					<img src="img/gopher.png" width="10%" alt="gopher"/>
+				</section>
+
+
+
+				<section>
 					<h4>Thank You!</h4>
 					<h4><a href="https://twitter.com/pivovarit">@pivovarit</a></h4>
 					<small><a href="https://4comprehension.com">4comprehension.com</a></small>
@@ -42,6 +73,10 @@
 					<br>
 					<small><a href="https://pivovarit.github.io/talks/learn-from-go">https://pivovarit.github.io/talks/learn-from-go</a></small>
 				</section>
+
+				<div class="footer">
+					<a href="https://twitter.com/pivovarit">@pivovarit</a>
+				</div>
 			</div>
 		</div>
 
@@ -61,4 +96,15 @@
 			});
 		</script>
 	</body>
+	<style>
+		.footer {
+			position: fixed;
+			bottom: 0;
+			width: 100%;
+			color: black;
+			text-align: right;
+			padding: 10px 0;
+			font-size: 16px;
+		}
+	</style>
 </html>
